--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Book Manager</title>
+  <link rel="stylesheet" href="style.css"/>
+</head>
+<body>
+  <div class="container">
+    <h1>📚 Book Manager</h1>
+    <form id="bookForm">
+      <input type="hidden" id="bookId">
+      <input type="text" id="title" placeholder="Book Title" required />
+      <input type="text" id="author" placeholder="Author" required />
+      <button type="submit">Add/Update Book</button>
+    </form>
 
+    <div class="book-list" id="bookList"></div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
